application.yaml: separate model and data paths

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,6 @@
 lca:
-  path: "trusted_library"
+  models: "trusted_library"
+  data: "trusted_library"
 cors:
   enabled: false
   allowed-origin: n/a
