--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    image: "ghcr.io/kleis-technology/cloud-assess/cloud-assess-app:1.6.4"
+    image: "ghcr.io/kleis-technology/cloud-assess/cloud-assess-app:1.6.5"
     container_name: cloud-assess-app
     ports:
     - "8080:8080"
@@ -10,7 +10,7 @@ services:
     environment:
       - LCA_CONFIG=/config
 #      - CORS_ENABLED=true
-#      - CORS_ALLOWED_ORIGIN=http://localhost:3000
+#      - CORS_ALLOWED_ORIGIN=http://localhost
   swagger_ui:
     image: "swaggerapi/swagger-ui"
     container_name: swagger-ui
