adapt to new in memory connector, introduced jobSize parameter

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,7 +13,14 @@
     {
       "name": "cors.enabled",
       "type": "java.lang.Boolean",
-      "description": "Enable CORS."
+      "description": "Enable CORS.",
+      "defaultValue": false
+    },
+    {
+      "name": "compute.job-size",
+      "type": "java.lang.Integer",
+      "description": "Job size.",
+      "defaultValue": 100
     }
   ]
 }
