trusted lib: refactor with updated ADEME's PCR

--- a/trusted_library/lcaac.yaml
+++ b/trusted_library/lcaac.yaml
@@ -1,8 +1,13 @@
 name: Cloud Assess Trusted Library
 description: Reference models for Cloud Assess
+
+# -------------------------------------- #
+#               Generic
+# -------------------------------------- #
+
 connectors:
   - name: csv
     cache:
       enabled: true
     options:
-      directory: .
+      directory: data
