--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,7 +26,9 @@ jobs:
           cache: gradle
 
       - name: Build gradle
-        run: ./gradlew :build
+        run: |
+          ./gradlew :build
+          ls -alh .
 
       # Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
