--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,7 +28,6 @@ jobs:
       - name: Build gradle
         run: |
           ./gradlew :build
-          ls -alh .
 
       # Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
@@ -42,6 +41,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.ref_name }}
