--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,6 @@
-version: "3"
 services:
   app:
-    image: "ghcr.io/kleis-technology/cloud-assess/cloud-assess-app:1.8.0"
+    image: "ghcr.io/kleis-technology/cloud-assess/cloud-assess-app:v1.8.0"
     container_name: cloud-assess-app
     ports:
     - "8080:8080"
